bug squashed and styling

--- a/index.css
+++ b/index.css
@@ -39,3 +39,24 @@ button {
     text-align: center;
     font-family: 'Rubik', sans-serif;
 }
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 7px;
+}
+
+ul li {
+    padding: 15px;
+    border-radius: 8px;
+    font-size: 20px;
+    flex-grow: 1;
+    text-align: center;
+    font-family: 'Rubik', sans-serif;
+    text-align: center;
+    background-color: #FFFDF8;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2)
+    
+}
